✨ Added PAPI placeholders for all quest options